conexión con backend inicio de sesión y registrarse

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 
             <div class="forms_containers">     
                 <!-- FORMULARIO DE INISIO DE SSESIÓN -->
-                <form action="./home.html" class="login_form">
+                <form action="#" class="login_form">
                     <h2>Inicia sesión en Surance</h2>
                     <i class='bx bxs-user' style='color:#7f5a83' ></i>
-                    <input type="text" placeholder="Usuario" required>
+                    <input id="loginUserName" type="text" placeholder="Usuario" required>
                     <i class='bx bxs-lock' style='color:#7f5a83'></i>
-                    <input type="password" placeholder="Contraseña" required>
-                    <button>Iniciar sesión</button>
+                    <input id="loginPassword" type="password" placeholder="Contraseña" required>
+                    <button type="submit">Iniciar sesión</button>
                 </form>           
                 <!-- FORMULARIO DE REGISTRO -->
-                <form action="./home.html" class="register_form">
+                <form action="#" class="register_form">
                     <h2>Registrate en Surance</h2>
-                    <input type="text" placeholder="Nombre completo" required>
-                    <input type="email" placeholder="Correo electrónico" required>
-                    <input type="text" placeholder="Nombre de usuario" required>
-                    <input type="password" placeholder="Contraseña" required>
+                    <input id="name" type="text" placeholder="Nombre completo" required>
+                    <input id="email" type="email" placeholder="Correo electrónico" required>
+                    <input id="userName" type="text" placeholder="Nombre de usuario" required>
+                    <input id="password" type="password" placeholder="Contraseña" required>
                     <button>Registrarse</button>
                 </form>
                 
