--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 		<!-- NAVBAR -->
 		<nav>
 			<i class='bx bx-menu toggle-sidebar' ></i>
-            <h2>Hola Usuario</h2>
+            <h2 id="userName"></h2>
 			<a href="#" class="nav-link">
 				<i class='bx bxs-bell icon' ></i>
 				<span class="badge">69</span>
@@ -45,7 +45,7 @@
 				<img src="https://www.elcolombiano.com/binrepository/841x562/0c0/0d0/none/11101/UPMB/40305366_40305366_20220713144007.jpg" alt="">
 				<ul class="profile-link">
 					<li><a href="./account.html"><i class='bx bxs-user-circle icon' ></i> Cuenta</a></li>
-					<li><a href="./index.html"><i class='bx bxs-log-out-circle' ></i> Cerrar Sesión</a></li>
+					<li><a id="btnLogout"><i class='bx bxs-log-out-circle' ></i> Cerrar Sesión</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -76,7 +76,7 @@
 						<div class="head">
 							<h3>Saldo</h3>
 						</div>
-						<h2>$ 0</h2>
+						<h2 id="balance"></h2>
 					</div>
 	
 					<div class="goals card">
