--- a/expenses.html
+++ b/expenses.html
@@ -51,7 +51,7 @@
 					alt="">
 				<ul class="profile-link">
 					<li><a href="./account.html"><i class='bx bxs-user-circle icon'></i> Cuenta</a></li>
-					<li><a href="./index.html"><i class='bx bxs-log-out-circle'></i> Cerrar Sesión</a></li>
+					<li><a id="btnLogout"><i class='bx bxs-log-out-circle'></i> Cerrar Sesión</a></li>
 				</ul>
 			</div>
 		</nav>
