--- a/goals.html
+++ b/goals.html
@@ -46,7 +46,7 @@
 				<img src="https://www.elcolombiano.com/binrepository/841x562/0c0/0d0/none/11101/UPMB/40305366_40305366_20220713144007.jpg" alt="">
 				<ul class="profile-link">
 					<li><a href="./account.html"><i class='bx bxs-user-circle icon' ></i> Cuenta</a></li>
-					<li><a href="./index.html"><i class='bx bxs-log-out-circle' ></i> Cerrar Sesión</a></li>
+					<li><a id="btnLogout"><i class='bx bxs-log-out-circle' ></i> Cerrar Sesión</a></li>
 				</ul>
 			</div>
 		</nav>
