--- a/incomes.html
+++ b/incomes.html
@@ -52,7 +52,7 @@
 					alt="">
 				<ul class="profile-link">
 					<li><a href="./account.html"><i class='bx bxs-user-circle icon'></i> Cuenta</a></li>
-					<li><a href="./index.html"><i class='bx bxs-log-out-circle'></i> Cerrar Sesión</a></li>
+					<li><a id="btnLogout"><i class='bx bxs-log-out-circle'></i> Cerrar Sesión</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -69,7 +69,7 @@
 
 				<div class="incomes_page card">
 
-					<div class="title">Registro de Egresos</div>
+					<div class="title">Registro de Ingresos</div>
 					<form id="form_register" method="post">
 
 
