--- a/account.html
+++ b/account.html
@@ -44,8 +44,7 @@
 			</a>
 			<span class="divider"></span>
 			<div class="profile">
-				<img src="https://www.elcolombiano.com/binrepository/841x562/0c0/0d0/none/11101/UPMB/40305366_40305366_20220713144007.jpg"
-					alt="">
+				<img src="https://www.citypng.com/public/uploads/small/11639594314mvt074h0zt5cijvfdn7gqxbrya72bzqulyd5bhqhemb5iasfe7gbydmr2jxk8lcclcp6qrgaoiuiavf4sendwc3jvwadddqmli2d.png" alt="">
 				<ul class="profile-link">
 					<li><a href="./account.html"><i class='bx bxs-user-circle icon'></i> Cuenta</a></li>
 					<li><a id="btnLogout"><i class='bx bxs-log-out-circle'></i> Cerrar Sesión</a></li>
@@ -85,8 +84,7 @@
 					<button class="btn" id="btnUpdate">Actualizar</button>
 
 					<div class="perfil-usuario-avatar">
-						<img src="https://www.elcolombiano.com/binrepository/841x562/0c0/0d0/none/11101/UPMB/40305366_40305366_20220713144007.jpg"
-					alt="">
+						<img src="https://www.citypng.com/public/uploads/small/11639594314mvt074h0zt5cijvfdn7gqxbrya72bzqulyd5bhqhemb5iasfe7gbydmr2jxk8lcclcp6qrgaoiuiavf4sendwc3jvwadddqmli2d.png" alt="">
 						<button type="button" class="boton-avatar">
 							<i class='bx bx-photo-album'></i>
 						</button>
