--- a/home.html
+++ b/home.html
@@ -66,8 +66,13 @@
 					<div class="head">
 						<h3>Ingresos y Egresos</h3>
 					</div>
-					<div class="chart">
-						<div id="chart"></div>
+					<div class="chart-container">
+						<div class="chart">
+							<div id="chart1"></div>
+						</div>
+						<div class="chart">
+							<div id="chart2"></div>
+						</div>
 					</div>
 				</div>
 
